# obsidian-p2p-sync

./: .editorconfig  .gitignore  INBOX.md  README.md  TODO.md  esbuild.config.mjs  main.css  main.ts  manifest.json  package-lock.json  package.json  setup.sh
demo-vault/: Sync Log.md
demo-vault/.obsidian/: app.json  community-plugins.json
docs/: architecture-deep-dive.md  architecture.md  product.md  roadmap.md  target.md  user-stories-index.md
docs/tutorial/: codebase-tutorial.md
docs/user-stories/: US-001-local-peer-discovery.md  US-002-secure-pairing-flow.md  US-003-full-vault-sync.md  US-004-incremental-file-sync.md  US-005-conflict-detection-keep-both.md  US-010-status-logs-notifications.md  US-012-internet-p2p.md  US-013-real-time-collaboration.md  US-014-device-revocation.md  US-018-settings-onboarding.md
p2p-sync-demo-vault/: Device A Notes.md  Device B Notes.md  README.md
p2p-sync-demo-vault/.obsidian/: core-plugins.json  workspace.json
p2p-sync-demo-vault/.obsidian/plugins/obsidian-p2p-sync/: data.json  manifest.json  obsidian_p2p_sync_bg.wasm  styles.css
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: crypto.rs  lib.rs  sync.rs  transfer.rs
scripts/: setup-demo-vault.mjs
src/: discovery-service.ts  security-service.ts  sync-service.ts  types.ts  wasm-bridge.ts
src/transport/: tcp-transport.ts  udp-transport.ts
src/ui/: confirmation-modal.ts  pairing-modal.ts  peer-list-view.css  peer-list-view.ts  sync-view.css  sync-view.ts
