[package]
name = "obsidian-p2p-sync"
version = "0.1.0"
edition = "2021"
authors = ["Anton Mitune"]
description = "Rust/WASM core for P2P vault synchronization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

# Future P2P dependencies (commented for now, will be used in Phase 1)
# libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns"] }
# tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
