[package]
name = "obsidian-p2p-sync"
version = "0.1.0"
edition = "2021"
authors = ["Anton Mitune"]
description = "Rust/WASM core for P2P vault synchronization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }

# For WASM compatibility, use web-compatible features only
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = "2.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = "0.6"
base64 = "0.21"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
hex = "0.4.3"

# Note: libp2p, tokio, ring, x25519-dalek, sha2, rand, notify, tracing
# will be used in native binary implementation
# For WASM, we implement simplified versions in Rust

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
